# DouglasPeuckerPolylineSimplification

./: CMakeLists.txt  ContourReaders.cpp  ContourReaders.h  ContourWriters.cpp  ContourWriters.h  DouglasPeucker.cxx  DouglasPeucker.h  DouglasPeuckerExample.cxx  DouglasPeuckerITK.cxx  DouglasPeuckerITK.h  DouglasPeuckerITKDemo.cxx  DouglasPeuckerITKDemoSimple.cxx  DouglasPeuckerITKExample.cxx  DouglasPeuckerVTK.cxx  DouglasPeuckerVTK.h  DouglasPeuckerVTKDemo.cxx  DouglasPeuckerVTKExample.cxx  PointReaderITK.cxx  PointReaderITK.h  Readme  common.h  input.txt  input.vtp  octave-core  point.cpp  point.h  vector.cpp  vector.h
Article/: DouglasPeucker.out  DouglasPeucker.tex  DouglasPeucker.tex.backup
